--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,16 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+@layer base {
+  h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-top: 0.83em;
+    margin-bottom: 0.83em;
+    color: #000;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+}
